working_files/admin-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: admin
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin-container
          image: >-
            geoservercloud/geoserver-cloud-admin-server:1.5.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 80m
              memory: 250Mi
            requests:
              cpu: 20m
              memory: 200Mi
