working_files/config-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: config
    spec:
      containers:
        - name: config-container
          image: >-
            geoservercloud/geoserver-cloud-config:1.5.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
