working_files/discovery-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
        - name: discovery-container
          image: >-
            geoservercloud/geoserver-cloud-discovery:1.5.0
          ports:
            - containerPort: 8761
