working_files/gateway-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-container
          image: >-
            geoservercloud/geoserver-cloud-gateway:1.5.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 80m
              memory: 250Mi
            requests:
              cpu: 20m
              memory: 200Mi
