working_files/rabbitmq-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      volumes:
        - name: rabbitmq-data
      containers:
        - name: rabbitmq-container
          image: >-
            rabbitmq:3.9-management
          ports:
            - containerPort: 8080
