working_files/rest-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      volumes:
        - name: shared-data-directory
          persistentVolumeClaim:
            claimName: shared-data-directory
      containers:
        - name: rest-container
          image: >-
            geoservercloud/geoserver-cloud-rest:1.5.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-data-directory
              mountPath: /opt/app/data_directory
