working_files/webui-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webui
  labels:
    app: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      volumes:
        - name: shared-data-directory
          persistentVolumeClaim:
            claimName: shared-data-directory
      containers:
        - name: webui-container
          image: >-
            geoservercloud/geoserver-cloud-webui:1.5.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-data-directory
              mountPath: /opt/app/data_directory
          resources:
            limits:
              cpu: 80m
              memory: 600Mi
            requests:
              cpu: 20m
              memory: 400Mi
