working_files/wfs-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wfs
  labels:
    app: wfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wfs
  template:
    metadata:
      labels:
        app: wfs
    spec:
      volumes:
        - name: shared-data-directory
          persistentVolumeClaim:
            claimName: shared-data-directory
      containers:
        - name: wfs-container
          image: >-
            geoservercloud/geoserver-cloud-wfs:1.5.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-data-directory
              mountPath: /opt/app/data_directory
          resources:
            limits:
              cpu: 80m
              memory: 700Mi
            requests:
              cpu: 20m
              memory: 500Mi
