working_files/wms-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wms
  labels:
    app: wms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wms
  template:
    metadata:
      labels:
        app: wms
    spec:
      volumes:
        - name: shared-data-directory
          persistentVolumeClaim:
            claimName: shared-data-directory
      containers:
        - name: wms-container
          image: >-
            geoservercloud/geoserver-cloud-wms:1.5.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-data-directory
              mountPath: /opt/app/data_directory
          resources:
            limits:
              cpu: 80m
              memory: 400Mi
            requests:
              cpu: 20m
              memory: 300Mi
