working_files/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config
spec:
  selector:
    app: config
  ports:
    - port: 8080
    # - port: 8081
