working_files/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  selector:
    app: discovery
  ports:
    # - port: 8080
    # - port: 8081
    - port: 8761
      targetPort: 8761
