working_files/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    # - port: 4369
    # - port: 5671
    # - port: 5672
    - port: 8080 # !!! This port is not in Docker inspect output
      targetPort: 5672
    # - port: 15671
    # - port: 15672
    # - port: 15691
    # - port: 15692
    # - port: 25672
