working_files/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
spec:
  selector:
    app: rest
  ports:
    - port: 8080
    # - port: 8081
