working_files/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  selector:
    app: webui
  ports:
    - port: 8080
