working_files/wfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wfs
spec:
  selector:
    app: wfs
  ports:
    - port: 8080
