working_files/wms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wms
spec:
  selector:
    app: wms
  ports:
    - port: 8080
